MMCPA-262: Update to fix spacing in the notification.

--- a/docroot/themes/custom/alshaya_white_label/sass/components/cart/_cart_notification.scss
+++ b/docroot/themes/custom/alshaya_white_label/sass/components/cart/_cart_notification.scss
@@ -59,7 +59,7 @@
       font-size: 0.688rem;
       float: $left;
       width: 9.5rem;
-      margin-#{left}: 0.6875rem;
+      margin-#{$left}: 0.6875rem;
 
       .name {
         font-family: $alshaya-thin;
